--- a/sass/_layout.sass
+++ b/sass/_layout.sass
@@ -12,16 +12,16 @@ html, body
 
 .list, .detail-column
     padding: 1em
-    height: 100%
 
 .detail-column
     display: none
+    min-height: 100%
 
 .list
     width: 96%
     margin: 0 auto
-    height: 100%
-    overflow-y: auto
+    min-height: 100%
+    +clearfix
     a
         display: block
     li
@@ -85,6 +85,8 @@ input[type="text"], #details
         width: 50%
         padding-left: 1.5em
         padding-right: 0.5em
+        overflow-y: auto
+        height: 100%
         li
             margin-right: 1em
     #intro
